# Lab-4-Developing-a-Makefile-and-CMake

./: CMakeLists.txt  Makefile  build.ninja  calculator.cpp  calculator.h  main.cpp  rules.ninja
