cmake_minimum_required(VERSION 3.10)
project(calculator_project)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES calculator.cpp main.cpp)
add_library(calculator_lib STATIC ${SOURCE_FILES})
add_executable(calculator_exec $<TARGET_OBJECTS:calculator_lib>)

install(TARGETS calculator_exec DESTINATION bin)
install(FILES calculator.h DESTINATION include)

